--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
+    "axios": "^1.12.2",
     "carousel": "^0.0.3",
+    "numeral": "^2.0.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-number-format": "^5.4.4",
     "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^7.9.1",
     "react-slick": "^0.31.0",
     "slick-carousel": "^1.8.1"
   },
