--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.9.1",
     "react-slick": "^0.31.0",
+    "react-spinners": "^0.17.0",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
