--- a/package.json
+++ b/package.json
@@ -1,43 +1,114 @@
 {
   
-  "name": "my-amazon-clone",
+  "name": "my-amazonmarket-clone",
+  
   "private": true,
+  
   "version": "0.0.0",
+  
   "type": "module",
+  
+  
   "scripts": {
+  
+    
   "dev": "vite",
+  
+    
   "build": "vite build",
+  
+    
   "preview": "vite preview",
+  
+    
   "predeploy": "npm run build",
-  "deploy": "gh-pages -d dist"
-},
-  "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.1",
-    "@mui/icons-material": "^7.3.2",
-    "@mui/material": "^7.3.2",
-    "axios": "^1.12.2",
-    "carousel": "^0.0.3",
-    "numeral": "^2.0.6",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-number-format": "^5.4.4",
-    "react-responsive-carousel": "^3.2.23",
-    "react-router-dom": "^7.9.1",
-    "react-slick": "^0.31.0",
-    "react-spinners": "^0.17.0",
-    "slick-carousel": "^1.8.1"
+  
+    
+  "deploy": "gh-pages -d dist",
+  "postbuild": "cp dist/index.html dist/404.html"
+  
   },
+  
+  "dependencies": {
+  
+    
+  "@emotion/react": "^11.14.0",
+  
+    
+  "@emotion/styled": "^11.14.1",
+  
+    
+  "@mui/icons-material": "^7.3.2",
+  
+    
+  "@mui/material": "^7.3.2",
+  
+    
+  "axios": "^1.12.2",
+  
+    
+  "carousel": "^0.0.3",
+  
+    
+  "numeral": "^2.0.6",
+  
+    
+  "react": "^19.1.1",
+  
+    
+  "react-dom": "^19.1.1",
+  
+    
+  "react-number-format": "^5.4.4",
+  
+    
+  "react-responsive-carousel": "^3.2.23",
+  
+    
+  "react-router-dom": "^7.9.1",
+  
+    
+  "react-slick": "^0.31.0",
+  
+    
+  "react-spinners": "^0.17.0",
+  
+    
+  "slick-carousel": "^1.8.1"
+  
+  },
+  
   "devDependencies": {
-    "@eslint/js": "^9.33.0",
-    "@types/react": "^19.1.10",
-    "@types/react-dom": "^19.1.7",
-    "@vitejs/plugin-react-swc": "^4.0.0",
-    "eslint": "^9.33.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
-    "gh-pages": "^6.3.0",
-    "globals": "^16.3.0",
-    "vite": "^7.1.2"
+  
+    
+  "@eslint/js": "^9.33.0",
+  
+    
+  "@types/react": "^19.1.10",
+  
+    
+  "@types/react-dom": "^19.1.7",
+  
+    
+  "@vitejs/plugin-react-swc": "^4.0.0",
+  
+    
+  "eslint": "^9.33.0",
+  
+    
+  "eslint-plugin-react-hooks": "^5.2.0",
+  
+    
+  "eslint-plugin-react-refresh": "^0.4.20",
+  
+    
+  "gh-pages": "^6.3.0",
+  
+    
+  "globals": "^16.3.0",
+  
+    
+  "vite": "^7.1.2"
+  
   }
 }
