--- a/package.json
+++ b/package.json
@@ -45,6 +45,12 @@
   "@mui/material": "^7.3.2",
   
     
+  "@stripe/react-stripe-js": "^4.0.2",
+  
+    
+  "@stripe/stripe-js": "^7.9.0",
+  
+    
   "axios": "^1.12.2",
   
     
